// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionController changeCardSelection when the control arg equal to false should update the select state of the item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`SelectionController changeCardSelection when the control arg equal to true should update the select state of the item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`SelectionController deselectCards should deselect item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`SelectionController deselectCardsByIndexes should deselect item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`SelectionController selectCards should select item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`SelectionController selectCardsByIndexes should select item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;
